# book-ocr

./: .gitignore  doc.py  main.py  pyproject.toml  utils.py
